Quartz sync: May 31, 2024, 11:38 PM

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -356,6 +356,11 @@ pre {
     border: none;
   }
 
+  & > svg{
+    width: 200%;
+    overflow-x: scroll;
+  }
+
   & > code {
     background: none;
     padding: 0;
