Quartz sync: May 31, 2024, 11:42 PM

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -354,11 +354,10 @@ pre {
 
   &:has(> code.mermaid) {
     border: none;
-  }
-
-  & > svg{
-    width: 200%;
-    overflow-x: scroll;
+    & code.mermaid svg{
+      width:200%;
+      overflow-x: scroll;
+    }
   }
 
   & > code {
