Quartz sync: Jun 1, 2024, 12:38 PM

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -355,8 +355,10 @@ pre {
   &:has(> code.mermaid) {
     border: none;
     & code.mermaid svg{
-      width:200%;
-      overflow-x: scroll;
+      &[aria-roledescription="timeline"]{
+        width:400%;
+        overflow-x: scroll;
+      }
     }
   }
 
