--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -356,7 +356,7 @@ pre {
     border: none;
     & code.mermaid svg{
       &[aria-roledescription="timeline"]{
-        width:400%;
+        width:300vw;
         overflow-x: scroll;
       }
     }
