--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -78,6 +78,7 @@ a {
       background-color: none;
       border-radius: 0;
       padding: 0;
+      vertical-align: middle;
     }
     &.tag-link {
       &::before {
